changed text in cards

--- a/index.html
+++ b/index.html
@@ -207,8 +207,7 @@ Join the millions of travelers who make the most of their vacations through Dest
 							<h5>Desert Riding  <br>
 								adventures</h5>
 							<p>
-								Join a group of adventure-seekers for 11 days as they travel over 350 miles across the world's largest sand desert on camel-back.
-							</p>
+								Join a group of adventure-seekers for 11 days as they travel  the world's largest sand desert on camel back.</p>
 							<a href="#" class="primary-btn mb-40">Read More</a>
 						</div>
 						<div class="feature-thumb">
