--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@ Join the millions of travelers who make the most of their vacations through Dest
 
                                       <div class="col-md-4">
 						  				<div class="filtr-item">
-											<img src="images/greece.jpg" alt="portfolio image"/>
+											<img src="images/greece1.jpg" alt="portfolio image"/>
 											<div class="item-title">
 												<a href="#">
 													Greece
