added attention buttton

--- a/index.html
+++ b/index.html
@@ -429,10 +429,10 @@ Join the millions of travelers who make the most of their vacations through Dest
 									</div><!--/.time-->
 								</div><!--/.timer-->
 							</div><!--/.campaign-timer-->
-							<div class="about-btn">
-								<button type="button" class="btn btn-primary btn-lg">Join Now</button>
-									
-								</button>
+							<div class="button__wrap">
+                            <button class="button" style="--hue: 267.1293123281296">Show me attention</button>
+                            <div class="button__shadow"></div>
+                            </div>
 							</div><!--/.about-btn-->
 
 
