changed 3d slider,text to offer and images

--- a/index.html
+++ b/index.html
@@ -53,19 +53,16 @@
     <div class="slider3d__inner">
       <div class="slider3d__rotater">
         <div class="slider3d__item">
-          <h2 class="slider3d__heading" data-text="explore">EXPLORE</h2>
-        </div>
-        <div class="slider3d__item" style="background-image:url(images/slide1.jpg);">
-          <h2 class="slider3d__heading" data-text="the World"> WORLD</h2>
+          <h2 class="slider3d__heading" data-text="explore">TO TRAVEL IS TO LIVE !</h2>
         </div>
         <div class="slider3d__item">
-          <h2 class="slider3d__heading" data-text="without">WITHOUT</h2>
         </div>
         <div class="slider3d__item">
-          <h2 class="slider3d__heading" data-text="limits">Limits !</h2>
         </div>
         <div class="slider3d__item">
-          <h2 class="slider3d__heading" data-text="WOW WOW!">Join Us !</h2>
+        </div>
+        <div class="slider3d__item">
+          <h2 class="slider3d__heading" data-text="Join Us!">Join Us !</h2>
         </div>
       </div>
     </div>
@@ -260,7 +257,7 @@ Join the millions of travelers who make the most of their vacations through Dest
 				<div class="gallery-details">
 					<div class="gallary-header text-center">
 						<h2>
-							top destinations
+							Top destinations!
 						</h2>
 						<p>
 						You can't miss these top attractions .   
@@ -278,10 +275,11 @@ Join the millions of travelers who make the most of their vacations through Dest
 												<a href="#">
 													India
 												</a>
-												<p><span>20 tours</span><span>15 places</span></p>
-											</div><!-- /.item-title -->
-										</div><!-- /.filtr-item -->
-						  			</div><!-- /.col -->
+												<p><span>20 tours</span></p>
+                                                <p><span>15 places</span></p>
+											</div>
+										</div>
+						  			</div>
 
 						  			<div class="col-md-6">
 						  				<div class="filtr-item">
@@ -290,10 +288,11 @@ Join the millions of travelers who make the most of their vacations through Dest
 												<a href="#">
 													London
 												</a>
-												<p><span>12 tours</span><span>9 places</span></p>
-											</div> <!-- /.item-title-->
-										</div><!-- /.filtr-item -->
-						  			</div><!-- /.col -->
+												<p><span>12 tours</span></p>
+                                                <p><span>9 places</span></p>
+											</div> 
+										</div>
+						  			</div>
 
 						  			<div class="col-md-4">
 						  				<div class="filtr-item">
@@ -302,10 +301,11 @@ Join the millions of travelers who make the most of their vacations through Dest
 												<a href="#">
 													Egypt
 												</a>
-												<p><span>25 tours</span><span>10 places</span></p>
-											</div><!-- /.item-title -->
-										</div><!-- /.filtr-item -->
-						  			</div><!-- /.col -->
+												<p><span>25 tours</span></p>
+                                                <p><span>10 places</span></p>
+											</div>
+										</div>
+						  			</div>
 
 						  			<div class="col-md-4">
 						  				<div class="filtr-item">
@@ -314,10 +314,11 @@ Join the millions of travelers who make the most of their vacations through Dest
 												<a href="#">
 													Maldives
 												</a>
-												<p><span>10 tours</span><span>9 places</span></p>
-											</div> <!-- /.item-title-->
-										</div><!-- /.filtr-item -->
-						  			</div><!-- /.col -->
+												<p><span>10 tours</span></p>
+                                                <p><span>9 places</span></p>
+											</div> 
+										</div>
+						  			</div>
 
 						  			<div class="col-md-4">
 						  				<div class="filtr-item">
@@ -326,10 +327,11 @@ Join the millions of travelers who make the most of their vacations through Dest
 												<a href="#">
 													Australia
 												</a>
-												<p><span>14 tours</span><span>12 places</span></p>
-											</div> <!-- /.item-title-->
-										</div><!-- /.filtr-item -->
-						  			</div><!-- /.col -->
+												<p><span>14 tours</span></p>
+                                                <p><span>12 places</span></p>
+											</div> 
+										</div>
+						  			</div>
 
 						  			<div class="col-md-6">
 						  				<div class="filtr-item">
@@ -338,10 +340,11 @@ Join the millions of travelers who make the most of their vacations through Dest
 												<a href="#">
 													Japan
 												</a>
-												<p><span>10 tours</span><span>6 places</span></p>
-											</div> <!-- /.item-title-->
-										</div><!-- /.filtr-item -->
-						  			</div><!-- /.col -->
+												<p><span>10 tours</span></p>
+                                                <p><span>6 places</span></p>
+											</div> 
+										</div>
+						  			</div>
                                      
                                       <div class="col-md-6">
 						  				<div class="filtr-item">
@@ -350,10 +353,11 @@ Join the millions of travelers who make the most of their vacations through Dest
 												<a href="#">
 													Scandinavia
 												</a>
-												<p><span>18 tours</span><span>12 places</span></p>
-											</div> <!-- /.item-title-->
-										</div><!-- /.filtr-item -->
-						  			</div><!-- /.col -->
+												<p><span>18 tours</span></p>
+                                                <P<<span>12 places</span></p>
+											</div> 
+										</div>
+						  			</div>
 
                                       <div class="col-md-4">
 						  				<div class="filtr-item">
@@ -362,10 +366,11 @@ Join the millions of travelers who make the most of their vacations through Dest
 												<a href="#">
 													New York
 												</a>
-												<p><span>10 tours</span><span>9 places</span></p>
-											</div> <!-- /.item-title-->
-										</div><!-- /.filtr-item -->
-						  			</div><!-- /.col -->
+												<p><span>10 tours</span></p>
+                                                <p><span>9 places</span></p>
+											</div> 
+										</div>
+						  			</div>
 
                                       <div class="col-md-4">
 						  				<div class="filtr-item">
@@ -374,10 +379,11 @@ Join the millions of travelers who make the most of their vacations through Dest
 												<a href="#">
 													Greece
 												</a>
-												<p><span>8 tours</span><span>9 places</span></p>
-											</div> <!-- /.item-title-->
-										</div><!-- /.filtr-item -->
-						  			</div><!-- /.col -->
+												<p><span>8 tours</span></p>
+                                                <P><span>9 places</span></p>
+											</div> 
+										</div>
+						  			</div>
 
                                       <div class="col-md-4">
 						  				<div class="filtr-item">
@@ -386,22 +392,22 @@ Join the millions of travelers who make the most of their vacations through Dest
 												<a href="#">
 													UAE
 												</a>
-												<p><span>18 tours</span><span>9 places</span></p>
-											</div> <!-- /.item-title-->
-										</div><!-- /.filtr-item -->
-						  			</div><!-- /.col -->
+												<p><span>18 tours</span></p>
+                                                <p><span>9 places</span></p>
+											</div> 
+										</div>
+						  			</div>
 
  
 
-						  		</div><!-- /.row -->
+						  		</div>
 
-						  	</div><!-- /.filtr-container-->
-						</div><!-- /.gallery-content -->
-					</div><!--/.galley-box-->
-				</div><!--/.gallery-details-->
-			</div><!--/.container-->
-
-		</section><!--/.gallery-->
+						  	</div>
+						</div>
+					</div>
+				</div>
+			</div>
+</section>
 		<!--gallery end-->
     </section>
 
@@ -412,30 +418,28 @@ Join the millions of travelers who make the most of their vacations through Dest
 				<div class="row">
 					<div class="col-sm-12">
 						<div class="discount-offer-content text-center">
-							<h2>Join with us within 23 December, 2020 and get upto 25% Discount</h2>
+							<h2>Join  us before 23 December 2020 and get upto 25% Discount</h2>
 							<div class="campaign-timer">
 								<div id="timer">
 									<div class="time time-after" id="days">
 										<span></span>
-									</div><!--/.time-->
+									</div>
 									<div class="time time-after" id="hours">
 
-									</div><!--/.time-->
+									</div>
 									<div class="time time-after" id="minutes">
 
-									</div><!--/.time-->
+									</div>
 									<div class="time" id="seconds">
 
-									</div><!--/.time-->
-								</div><!--/.timer-->
-							</div><!--/.campaign-timer-->
+									</div>
+								</div>
+							</div>
 							<div class="button__wrap">
                             <button class="button" style="--hue: 267.1293123281296">Show me attention</button>
                             <div class="button__shadow"></div>
                             </div>
-							</div><!--/.about-btn-->
-
-
+							</div>
 						</div>
 					</div>
 				</div>
@@ -443,114 +447,7 @@ Join the millions of travelers who make the most of their vacations through Dest
 		</section>
 		<!--discount-offer end-->
 
-<!--tour destination-->
-    <section class="ftco-section ftco-no-pt">
-    	<div class="container">
-    		<div class="row justify-content-center pb-4">
-          <div class="col-md-12 heading-section text-center ftco-animate">
-            <h2 class="mb-4">Tour Destinations</h2>
-          </div>
-        </div>
-        <div class="row">
-        	<div class="col-md-4 ftco-animate">
-        		<div class="project-wrap">
-        			<a href="#" class="img" style="background-image: url(images/destination1.jpg);"></a>
-        			<div class="text p-4">
-        				<span class="price">$300/person</span>
-        				<span class="days">8 Days Tour</span>
-        				<h3><a href="#"> Switzerland</a></h3>
-        				<p class="location"><span class="ion-ios-map"></span>  Switzerland</p>
-        				<ul>
-        					<li><span class="flaticon-shower"></span>2</li>
-        					<li><span class="flaticon-king-size"></span>3</li>
-        					<li><span class="flaticon-mountains"></span>Near Mountain</li>
-        				</ul>
-        			</div>
-        		</div>
-        	</div>
-        	<div class="col-md-4 ftco-animate">
-        		<div class="project-wrap">
-        			<a href="#" class="img" style="background-image: url(images/destination2.jpg);"></a>
-        			<div class="text p-4">
-        				<span class="price">$250/person</span>
-        				<span class="days">7 Days Tour</span>
-        				<h3><a href="#">Rio de Janeiro, Brazil</a></h3>
-        				<p class="location"><span class="ion-ios-map"></span> Rio de Janeiro, Brazil</p>
-        				<ul>
-        					<li><span class="flaticon-shower"></span>2</li>
-        					<li><span class="flaticon-king-size"></span>3</li>
-        					<li><span class="flaticon-sun-umbrella"></span>Near Beach</li>
-        				</ul>
-        			</div>
-        		</div>
-        	</div>
-        	<div class="col-md-4 ftco-animate">
-        		<div class="project-wrap">
-        			<a href="#" class="img" style="background-image: url(images/destination3.jpg);"></a>
-        			<div class="text p-4">
-        				<span class="price">$300/person</span>
-        				<span class="days">10 Days Tour</span>
-        				<h3><a href="#"> India</a></h3>
-        				<p class="location"><span class="ion-ios-map"></span> India</p>
-        				<ul>
-        					<li><span class="flaticon-shower"></span>2</li>
-        					<li><span class="flaticon-king-size"></span>3</li>
-        				</ul>
-        			</div>
-        		</div>
-        	</div>
 
-        	<div class="col-md-4 ftco-animate">
-        		<div class="project-wrap">
-        			<a href="#" class="img" style="background-image: url(images/destination4.jpg);"></a>
-        			<div class="text p-4">
-        				<span class="price">$300/person</span>
-        				<span class="days">4 Days Tour</span>
-        				<h3><a href="#">Las Vegas, USA</a></h3>
-        				<p class="location"><span class="ion-ios-map"></span>Las Vegas, USA</p>
-        				<ul>
-        					<li><span class="flaticon-shower"></span>2</li>
-        					<li><span class="flaticon-king-size"></span>3</li>
-        					<li><span class="flaticon-mountains"></span>Near Mountain</li>
-        				</ul>
-        			</div>
-        		</div>
-        	</div>
-        	<div class="col-md-4 ftco-animate">
-        		<div class="project-wrap">
-        			<a href="#" class="img" style="background-image: url(images/destination5.jpg);"></a>
-        			<div class="text p-4">
-        				<span class="price">$300/person</span>
-        				<span class="days">10 Days Tour</span>
-        				<h3><a href="#">Bali, Indonesia</a></h3>
-        				<p class="location"><span class="ion-ios-map"></span> Bali, Indonesia</p>
-        				<ul>
-        					<li><span class="flaticon-shower"></span>2</li>
-        					<li><span class="flaticon-king-size"></span>3</li>
-        					<li><span class="flaticon-sun-umbrella"></span>Near Beach</li>
-        				</ul>
-        			</div>
-        		</div>
-        	</div>
-        	<div class="col-md-4 ftco-animate">
-        		<div class="project-wrap">
-        			<a href="#" class="img" style="background-image: url(images/destination6.jpg);"></a>
-        			<div class="text p-4">
-        				<span class="price">$250/person</span>
-        				<span class="days">7 Days Tour</span>
-        				<h3><a href="#"> Japan</a></h3>
-        				<p class="location"><span class="ion-ios-map"></span> Japan</p>
-        				<ul>
-        					<li><span class="flaticon-shower"></span>2</li>
-        					<li><span class="flaticon-king-size"></span>3</li>
-        					<li><span class="flaticon-mountains"></span>Near Mountain</li>
-        				</ul>
-        			</div>
-        		</div>
-        	</div>
-        </div>
-    	</div>
-    </section>
     <!---testimony-->
     <section class="ftco-section testimony-section bg-bottom" style="background-image: url(images/bg_3.jpg);"> 
     <div class="testimonial-section"> 
