--- a/Vacation.html
+++ b/Vacation.html
@@ -217,22 +217,24 @@
     </section>
 
 <!--end of form-->
+
+    <!--tour destination-->
     <section class="ftco-section ftco-no-pt">
     	<div class="container">
     		<div class="row justify-content-center pb-4">
           <div class="col-md-12 heading-section text-center ftco-animate">
-            <h2 class="mb-4">Tour Destination</h2>
+            <h2 class="mb-4">Tour Destinations</h2>
           </div>
         </div>
         <div class="row">
         	<div class="col-md-4 ftco-animate">
         		<div class="project-wrap">
-        			<a href="#" class="img" style="background-image: url(images/destination-1.jpg);"></a>
+        			<a href="#" class="img" style="background-image: url(images/destination1.jpg);"></a>
         			<div class="text p-4">
         				<span class="price">$300/person</span>
         				<span class="days">8 Days Tour</span>
-        				<h3><a href="#">Bali, Indonesia</a></h3>
-        				<p class="location"><span class="ion-ios-map"></span> Bali, Indonesia</p>
+        				<h3><a href="#"> Switzerland</a></h3>
+        				<p class="location"><span class="ion-ios-map"></span>  Switzerland</p>
         				<ul>
         					<li><span class="flaticon-shower"></span>2</li>
         					<li><span class="flaticon-king-size"></span>3</li>
@@ -243,12 +245,12 @@
         	</div>
         	<div class="col-md-4 ftco-animate">
         		<div class="project-wrap">
-        			<a href="#" class="img" style="background-image: url(images/destination-2.jpg);"></a>
+        			<a href="#" class="img" style="background-image: url(images/destination2.jpg);"></a>
         			<div class="text p-4">
-        				<span class="price">$300/person</span>
-        				<span class="days">10 Days Tour</span>
-        				<h3><a href="#">Bali, Indonesia</a></h3>
-        				<p class="location"><span class="ion-ios-map"></span> Bali, Indonesia</p>
+        				<span class="price">$250/person</span>
+        				<span class="days">7 Days Tour</span>
+        				<h3><a href="#">Rio de Janeiro, Brazil</a></h3>
+        				<p class="location"><span class="ion-ios-map"></span> Rio de Janeiro, Brazil</p>
         				<ul>
         					<li><span class="flaticon-shower"></span>2</li>
         					<li><span class="flaticon-king-size"></span>3</li>
@@ -259,16 +261,15 @@
         	</div>
         	<div class="col-md-4 ftco-animate">
         		<div class="project-wrap">
-        			<a href="#" class="img" style="background-image: url(images/destination-3.jpg);"></a>
+        			<a href="#" class="img" style="background-image: url(images/destination3.jpg);"></a>
         			<div class="text p-4">
         				<span class="price">$300/person</span>
-        				<span class="days">7 Days Tour</span>
-        				<h3><a href="#">Bali, Indonesia</a></h3>
-        				<p class="location"><span class="ion-ios-map"></span> Bali, Indonesia</p>
+        				<span class="days">10 Days Tour</span>
+        				<h3><a href="#"> India</a></h3>
+        				<p class="location"><span class="ion-ios-map"></span> India</p>
         				<ul>
         					<li><span class="flaticon-shower"></span>2</li>
         					<li><span class="flaticon-king-size"></span>3</li>
-        					<li><span class="flaticon-sun-umbrella"></span>Near Beach</li>
         				</ul>
         			</div>
         		</div>
@@ -276,61 +277,12 @@
 
         	<div class="col-md-4 ftco-animate">
         		<div class="project-wrap">
-        			<a href="#" class="img" style="background-image: url(images/destination-4.jpg);"></a>
+        			<a href="#" class="img" style="background-image: url(images/destination4.jpg);"></a>
         			<div class="text p-4">
         				<span class="price">$300/person</span>
-        				<span class="days">8 Days Tour</span>
-        				<h3><a href="#">Bali, Indonesia</a></h3>
-        				<p class="location"><span class="ion-ios-map"></span> Bali, Indonesia</p>
-        				<ul>
-        					<li><span class="flaticon-shower"></span>2</li>
-        					<li><span class="flaticon-king-size"></span>3</li>
-        					<li><span class="flaticon-sun-umbrella"></span>Near Beach</li>
-        				</ul>
-        			</div>
-        		</div>
-        	</div>
-        	<div class="col-md-4 ftco-animate">
-        		<div class="project-wrap">
-        			<a href="#" class="img" style="background-image: url(images/destination-5.jpg);"></a>
-        			<div class="text p-4">
-        				<span class="price">$300/person</span>
-        				<span class="days">10 Days Tour</span>
-        				<h3><a href="#">Bali, Indonesia</a></h3>
-        				<p class="location"><span class="ion-ios-map"></span> Bali, Indonesia</p>
-        				<ul>
-        					<li><span class="flaticon-shower"></span>2</li>
-        					<li><span class="flaticon-king-size"></span>3</li>
-        					<li><span class="flaticon-sun-umbrella"></span>Near Beach</li>
-        				</ul>
-        			</div>
-        		</div>
-        	</div>
-        	<div class="col-md-4 ftco-animate">
-        		<div class="project-wrap">
-        			<a href="#" class="img" style="background-image: url(images/destination-6.jpg);"></a>
-        			<div class="text p-4">
-        				<span class="price">$300/person</span>
-        				<span class="days">7 Days Tour</span>
-        				<h3><a href="#">Bali, Indonesia</a></h3>
-        				<p class="location"><span class="ion-ios-map"></span> Bali, Indonesia</p>
-        				<ul>
-        					<li><span class="flaticon-shower"></span>2</li>
-        					<li><span class="flaticon-king-size"></span>3</li>
-        					<li><span class="flaticon-sun-umbrella"></span>Near Beach</li>
-        				</ul>
-        			</div>
-        		</div>
-        	</div>
-
-        	<div class="col-md-4 ftco-animate">
-        		<div class="project-wrap">
-        			<a href="#" class="img" style="background-image: url(images/destination-7.jpg);"></a>
-        			<div class="text p-4">
-        				<span class="price">$300/person</span>
-        				<span class="days">8 Days Tour</span>
-        				<h3><a href="#">Bali, Indonesia</a></h3>
-        				<p class="location"><span class="ion-ios-map"></span> Bali, Indonesia</p>
+        				<span class="days">4 Days Tour</span>
+        				<h3><a href="#">Las Vegas, USA</a></h3>
+        				<p class="location"><span class="ion-ios-map"></span>Las Vegas, USA</p>
         				<ul>
         					<li><span class="flaticon-shower"></span>2</li>
         					<li><span class="flaticon-king-size"></span>3</li>
@@ -341,7 +293,7 @@
         	</div>
         	<div class="col-md-4 ftco-animate">
         		<div class="project-wrap">
-        			<a href="#" class="img" style="background-image: url(images/destination-8.jpg);"></a>
+        			<a href="#" class="img" style="background-image: url(images/destination5.jpg);"></a>
         			<div class="text p-4">
         				<span class="price">$300/person</span>
         				<span class="days">10 Days Tour</span>
@@ -357,61 +309,12 @@
         	</div>
         	<div class="col-md-4 ftco-animate">
         		<div class="project-wrap">
-        			<a href="#" class="img" style="background-image: url(images/destination-9.jpg);"></a>
+        			<a href="#" class="img" style="background-image: url(images/destination6.jpg);"></a>
         			<div class="text p-4">
-        				<span class="price">$300/person</span>
+        				<span class="price">$250/person</span>
         				<span class="days">7 Days Tour</span>
-        				<h3><a href="#">Bali, Indonesia</a></h3>
-        				<p class="location"><span class="ion-ios-map"></span> Bali, Indonesia</p>
-        				<ul>
-        					<li><span class="flaticon-shower"></span>2</li>
-        					<li><span class="flaticon-king-size"></span>3</li>
-        					<li><span class="flaticon-sun-umbrella"></span>Near Beach</li>
-        				</ul>
-        			</div>
-        		</div>
-        	</div>
-
-        	<div class="col-md-4 ftco-animate">
-        		<div class="project-wrap">
-        			<a href="#" class="img" style="background-image: url(images/destination-10.jpg);"></a>
-        			<div class="text p-4">
-        				<span class="price">$300/person</span>
-        				<span class="days">8 Days Tour</span>
-        				<h3><a href="#">Bali, Indonesia</a></h3>
-        				<p class="location"><span class="ion-ios-map"></span> Bali, Indonesia</p>
-        				<ul>
-        					<li><span class="flaticon-shower"></span>2</li>
-        					<li><span class="flaticon-king-size"></span>3</li>
-        					<li><span class="flaticon-mountains"></span>Near Mountain</li>
-        				</ul>
-        			</div>
-        		</div>
-        	</div>
-        	<div class="col-md-4 ftco-animate">
-        		<div class="project-wrap">
-        			<a href="#" class="img" style="background-image: url(images/destination-11.jpg);"></a>
-        			<div class="text p-4">
-        				<span class="price">$300/person</span>
-        				<span class="days">10 Days Tour</span>
-        				<h3><a href="#">Bali, Indonesia</a></h3>
-        				<p class="location"><span class="ion-ios-map"></span> Bali, Indonesia</p>
-        				<ul>
-        					<li><span class="flaticon-shower"></span>2</li>
-        					<li><span class="flaticon-king-size"></span>3</li>
-        					<li><span class="flaticon-sun-umbrella"></span>Near Beach</li>
-        				</ul>
-        			</div>
-        		</div>
-        	</div>
-        	<div class="col-md-4 ftco-animate">
-        		<div class="project-wrap">
-        			<a href="#" class="img" style="background-image: url(images/destination-12.jpg);"></a>
-        			<div class="text p-4">
-        				<span class="price">$300/person</span>
-        				<span class="days">7 Days Tour</span>
-        				<h3><a href="#">Bali, Indonesia</a></h3>
-        				<p class="location"><span class="ion-ios-map"></span> Bali, Indonesia</p>
+        				<h3><a href="#"> Japan</a></h3>
+        				<p class="location"><span class="ion-ios-map"></span> Japan</p>
         				<ul>
         					<li><span class="flaticon-shower"></span>2</li>
         					<li><span class="flaticon-king-size"></span>3</li>
@@ -421,6 +324,8 @@
         		</div>
         	</div>
         </div>
+    	</div>
+    </section>
         <div class="row mt-5">
           <div class="col text-center">
             <div class="block-27">
@@ -438,7 +343,7 @@
         </div>
     	</div>
     </section>
-
+<!--end of tour destinations-->
    <!--footer-->
     <footer class="ftco-footer bg-bottom" style="background-image: url(images/footer-bg.jpg);">
       <div class="container">
