changed image location

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ Join the millions of travelers who make the most of their vacations through Dest
     	<div class="container">
     		<div class="row d-flex">
     			<div class="col-md-6 d-flex">
-    				<div class="img d-flex align-self-stretch" style="background-image:url(/assets/images/safe.jpg);"></div>
+    				<div class="img d-flex align-self-stretch" style="background-image:url(assets/images/safe.jpg);"></div>
     			</div>
     			<div class="col-md-6 pl-md-5 py-5">
     				<div class="row justify-content-start pb-3">
