--- a/index.html
+++ b/index.html
@@ -398,9 +398,6 @@ Join the millions of travelers who make the most of their vacations through Dest
 											</div> 
 										</div>
 						  			</div>
-
- 
-
 						  		</div>
 
 						  	</div>
@@ -419,7 +416,8 @@ Join the millions of travelers who make the most of their vacations through Dest
 				<div class="row">
 					<div class="col-sm-12">
 						<div class="discount-offer-content text-center">
-							<h2>Join  us before 23 December 2020 and get upto 25% Discount</h2>
+							<h2>Join  us before 23 December 2020 and get upto 25% Discount !</h2>
+                            	<div class=" col-md-12">
 							<div class="campaign-timer">
 								<div id="timer">
 									<div class="time time-after" id="days">
