--- a/Vacation.html
+++ b/Vacation.html
@@ -142,6 +142,166 @@
     </section>
     <!---end of top-->
 
+<!-- Offers -->
+
+	<div class="offers">
+		<div class="container">
+			<div class="row">
+				<div class="col text-center">
+					<h2 class="section_title"> Best Deals ! </h2>
+				</div>
+			</div>
+			<div class="row offers_items">
+
+				<!-- Offers Item -->
+				<div class="col-lg-6 offers_col">
+					<div class="offers_item">
+						<div class="row">
+							<div class="col-lg-6">
+								<div class="offers_image_container">
+									<div class="offers_image_background" style="background-image:url(assets/images/offer1.jpg)"></div>
+									<div class="offer_name"><a href="#">Japan port</a></div>
+								</div>
+							</div>
+							<div class="col-lg-6">
+								<div class="offers_content">
+									<div class="offers_price">$50<span>per night</span></div>
+									<div class="rating_r rating_r_4 offers_rating">
+										<i></i>
+										<i></i>
+										<i></i>
+										<i></i>
+										<i></i>
+									</div>
+									<p class="offers_text">Japan's northern island of Hokkaido was fully pioneered only around 150 years ago!  Otaru itself has become a popular tourist destination over recent years as there are ski resorts .</p>
+									<div class="offers_icons">
+										<ul class="offers_icons_list">
+											<li class="offers_icons_item"><img src="assets/images/post.png" alt=""></li>
+											<li class="offers_icons_item"><img src="assets/images/compass.png" alt=""></li>
+											<li class="offers_icons_item"><img src="assets/images/bicycle.png" alt=""></li>
+											<li class="offers_icons_item"><img src="assets/images/sailboat.png" alt=""></li>
+										</ul>
+									</div>
+									<div class="offers_link"><a href="#">read more</a></div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				
+				<!-- Offers Item -->
+				<div class="col-lg-6 offers_col">
+					<div class="offers_item">
+						<div class="row">
+							<div class="col-lg-6">
+								<div class="offers_image_container">
+									<div class="offers_image_background" style="background-image:url(assets/images/offer2.jpg)"></div>
+									<div class="offer_name"><a href="#">Greece coast</a></div>
+								</div>
+							</div>
+							<div class="col-lg-6">
+								<div class="offers_content">
+									<div class="offers_price">$50<span>per night</span></div>
+									<div class="rating_r rating_r_4 offers_rating">
+										<i></i>
+										<i></i>
+										<i></i>
+										<i></i>
+										<i></i>
+									</div>
+									<p class="offers_text">Oia is a coastal town on the northwestern tip of Santorini, a Greek Aegean island. The town has whitewashed houses carved into the rugged clifftops,</p>
+									<div class="offers_icons">
+										<ul class="offers_icons_list">
+											<li class="offers_icons_item"><img src="assets/images/post.png" alt=""></li>
+											<li class="offers_icons_item"><img src="assets/images/compass.png" alt=""></li>
+											<li class="offers_icons_item"><img src="assets/images/bicycle.png" alt=""></li>
+											<li class="offers_icons_item"><img src="assets/images/sailboat.png" alt=""></li>
+										</ul>
+									</div>
+									<div class="offers_link"><a href="#">read more</a></div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<!-- Offers Item -->
+				<div class="col-lg-6 offers_col">
+					<div class="offers_item">
+						<div class="row">
+							<div class="col-lg-6">
+								<div class="offers_image_container">
+									<div class="offers_image_background" style="background-image:url(assets/images/offer3.jpg)"></div>
+									<div class="offer_name"><a href="#">island dream</a></div>
+								</div>
+							</div>
+							<div class="col-lg-6">
+								<div class="offers_content">
+									<div class="offers_price">$90<span>per night</span></div>
+									<div class="rating_r rating_r_4 offers_rating">
+										<i></i>
+										<i></i>
+										<i></i>
+										<i></i>
+										<i></i>
+									</div>
+									<p class="offers_text">Oneeighty is the signature cliff-edge pool bar and lounge at The Edge Bali, a luxury villa resort in Pecatu .Bali is an Indonesian island known for its forested volcanic mountains,</p>
+									<div class="offers_icons">
+										<ul class="offers_icons_list">
+											<li class="offers_icons_item"><img src="assets/images/post.png" alt=""></li>
+											<li class="offers_icons_item"><img src="assets/images/compass.png" alt=""></li>
+											<li class="offers_icons_item"><img src="assets/images/bicycle.png" alt=""></li>
+											<li class="offers_icons_item"><img src="assets/images/sailboat.png" alt=""></li>
+										</ul>
+									</div>
+									<div class="offers_link"><a href="#">read more</a></div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<!-- Offers Item -->
+				<div class="col-lg-6 offers_col">
+					<div class="offers_item">
+						<div class="row">
+							<div class="col-lg-6">
+								<div class="offers_image_container">
+									<div class="offers_image_background" style="background-image:url(assets/images/offer4.jpg)"></div>
+									<div class="offer_name"><a href="#">Indian gardens</a></div>
+								</div>
+							</div>
+							<div class="col-lg-6">
+								<div class="offers_content">
+									<div class="offers_price">$50<span>per night</span></div>
+									<div class="rating_r rating_r_4 offers_rating">
+										<i></i>
+										<i></i>
+										<i></i>
+										<i></i>
+										<i></i>
+									</div>
+									<p class="offers_text">Located in the mountains of the Western Ghats in the state of Kerala, Munnar is a hill station surrounded by some of the most scenic verdant tea plantations in India.</p>
+									<div class="offers_icons">
+										<ul class="offers_icons_list">
+											<li class="offers_icons_item"><img src="assets/images/post.png" alt=""></li>
+											<li class="offers_icons_item"><img src="assets/images/compass.png" alt=""></li>
+											<li class="offers_icons_item"><img src="assets/images/bicycle.png" alt=""></li>
+											<li class="offers_icons_item"><img src="assets/images/sailboat.png" alt=""></li>
+										</ul>
+									</div>
+									<div class="offers_link"><a href="#">read more</a></div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</div>
+	</div>
+    <!--end of offer-->
+
 <!--travel form-->
     <section class="ftco-section ftco-no-pb ftco-no-pt">
     	<div class="container">
