made discount offer in to responsive

--- a/index.html
+++ b/index.html
@@ -412,13 +412,13 @@ Join the millions of travelers who make the most of their vacations through Dest
 
     
 		<!--discount-offer start-->
-		<section class="discount-offer">
+		<section class="ftco-section ftco-no-pb ftco-no-pt">
 			<div class="container">
 				<div class="row">
-					<div class="col-sm-12">
+					<div class="col-md-12 mb-5">
 						<div class="discount-offer-content text-center">
-							<h2>Join  us before 23 December 2020 and get upto 25% Discount !</h2>
-                            	<div class=" col-md-12">
+							<h2>Book before 23 December 2020 and get upto 25% Discount !</h2>
+                            	<div class=" col-lg align-items-end">
 							<div class="campaign-timer">
 								<div id="timer">
 									<div class="time time-after" id="days">
