--- a/Vacation.html
+++ b/Vacation.html
@@ -593,6 +593,7 @@
         				<ul>
         					<li><span class="flaticon-shower"></span>2</li>
         					<li><span class="flaticon-king-size"></span>3</li>
+                            <li><span class="flaticon-mountains"></span>Near Mountain</li>
         				</ul>
         			</div>
         		</div>
