--- a/Vacation.html
+++ b/Vacation.html
@@ -40,7 +40,7 @@
 	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 	          <li class="nav-item"><a href="Vacation.html" class="nav-link">Vacation</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-	          <li class="nav-item cta"><a href="#" class="nav-link">Book Now</a></li>
+	          <li class="nav-item cta"><a href="book.html" class="nav-link">Book Now</a></li>
 
 	        </ul>
 	      </div>
